<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/business_detail_et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/business_detail_et_name" />

    <EditText
        android:id="@+id/business_detail_et_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/business_detail_et_address" />

    <TextView
        android:id="@+id/business_detail_tv_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5sp"
        android:text="@string/business_detail_tv_longitude"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/business_detail_tv_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5sp"
        android:text="@string/business_detail_tv_latitude"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/business_detail_iv_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:maxWidth="40dp"
        android:maxHeight="40dp"
        android:contentDescription="@string/business_detail_iv_photo" />

    <Button
        android:id="@+id/business_detail_btn_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_detail_btn_location" />

    <Button
        android:id="@+id/business_detail_btn_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_detail_btn_photo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/business_detail_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_detail_btn_submit" />

        <Button
            android:id="@+id/business_detail_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_detail_btn_cancel" />
    </LinearLayout>

</LinearLayout>